@@ -10,6 +10,7 @@
   * [Install-Share](http://get-carbon.org/help/Install-Share.html)
   * [Add-GroupMembers](http://get-carbon.org/help/Add-GroupMembers.html)
   * [Get-WmiLocalUserAccount](http://get-carbon.org/help/Get-WmiLocalUserAccount.html)
+  * [Install-Group](http://get-carbon.org/help/Install-Group.html)
   
 # 0.2.5 (29 June 2012)
 
